Fix some typos.

--- a/src/Src/BouncyHsm.Spa/wwwroot/index.html
+++ b/src/Src/BouncyHsm.Spa/wwwroot/index.html
@@ -19,10 +19,9 @@
 </head>
 
 <body>
-    <div id="app">
-
-        <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary"
+    <div id="app" class="rounded-0">
+        <div class="progress rounded-0">
+            <div class="progress-bar bg-info"
                  id="loading-progress-bar"
                  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
